wire up the protofeed call
